maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return ! estFaceMur()
  ^Escaper:19: error: type mismatch;
 found   : Unit
 required: Int
      sommeVirage = keepHandOnSideWall(sommeVirage)
                                      ^Escaper:27: error: not enough arguments for method keepHandOnSideWall: (som: Int)Unit.
Unspecified value parameter som.
    keepHandOnSideWall()
                      ^Escaper:37: error: reassignment to val
  som = som-1
      ^Escaper:44: error: reassignment to val
      som= som+1
         ^Escaper:48: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return som
         ^Escaper:48: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return som
  ^